...
    _lgaaChartView.center = self.view.center;
    [_lgaaChartView reloadDataWithModel:self.chartModel];
    
    _lgaaChartView.transform = CGAffineTransformMakeRotation(M_PI_2);
    
    _restoreButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [_restoreButton setTitle:@"Restore" forState:UIControlStateNormal];
    [self.lgaaChartView addSubview:_restoreButton];
    _restoreButton.frame = CGRectMake(width - 80, 0, 80, 40);
    _restoreButton.layer.borderColor = [UIColor blueColor].CGColor;
    _restoreButton.layer.borderWidth = 1;
    [_restoreButton addTarget:self action:@selector(restoreAction) forControlEvents:UIControlEventTouchUpInside];
}
...
