...
}

#pragma mark - getter
- (UIButton *)enlargeButton {
    if (!_enlargeButton) {
        _enlargeButton = [UIButton buttonWithType:UIButtonTypeSystem];
        [_enlargeButton setTitle:@"Enlarge" forState:UIControlStateNormal];
        _enlargeButton.bounds = CGRectMake(0, 0, 80, 40);
        _enlargeButton.layer.borderColor = [UIColor blueColor].CGColor;
        _enlargeButton.layer.borderWidth = 1;
        _enlargeButton.hidden = YES;
        [_enlargeButton addTarget:self action:@selector(enlargeAction) forControlEvents:UIControlEventTouchUpInside];
    }
...
