...
    // 激活所有约束
    [NSLayoutConstraint activateConstraints:@[centerY, leading, trailing]];
//    [self addSubview:self.noDataImgView];
//    [self addSubview:self.noDataLabel];
    
//    self.nodImgName = @"list.bullet.clipboard";
//    self.nodText = @"暂无数据";
}

- (void)traitCollectionDidChange:(UITraitCollection *)previousTraitCollection {
    [super traitCollectionDidChange:previousTraitCollection];
    
    if ([self.traitCollection hasDifferentColorAppearanceComparedToTraitCollection:previousTraitCollection]) {
...
